--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,8 +17,8 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v3
         with:
-          distribution: 'zulu'
-          java-version: '12'
+          distribution: 'adopt' # See 'Supported distributions' for available options
+          java-version: '17'
       - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
